<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/displayLayout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/resultTV"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:textSize="30sp"
                android:textColor="@color/blackWhite"
                android:textStyle="bold"
                android:gravity="end|bottom"
                tools:text="12"/>

            <TextView
                android:id="@+id/displayTV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:textColor="@color/HintTextColor"
                android:textStyle="bold"
                android:gravity="end|bottom"
                android:visibility="gone"
                tools:text="15"/>
        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:weightSum="5"
            app:layout_constraintTop_toBottomOf="@+id/displayLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/allClear"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/ac"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/operatorButtonColor"
                    android:textColor="@color/operatorTextColor"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backspace"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/operatorButtonColor"
                    android:text="\u232b"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/operatorTextColor"
                    android:onClick="clickEvent"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/percent"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/percentage"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/operatorButtonColor"
                    android:textColor="@color/operatorTextColor"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/divide"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="\u00F7"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/operatorButtonColor"
                    android:textColor="@color/operatorTextColor"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/seven"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/seven"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/eight"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/eight"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nine"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/nine"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/multiply"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/multiply"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/operatorButtonColor"
                    android:textColor="@color/operatorTextColor"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/four"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/four"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/five"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/five"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/six"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/six"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minus"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/minus"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/operatorButtonColor"
                    android:textColor="@color/operatorTextColor"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/one"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/one"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/two"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/two"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/three"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/three"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/plus"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/plus"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/operatorButtonColor"
                    android:textColor="@color/operatorTextColor"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/doubleZero"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/doubleZero"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/zero"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/zero"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dot"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/dot"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/btnColor"
                    android:textColor="@color/blackWhite"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/equals"
                    android:layout_width="60dp"
                    android:layout_height="70dp"
                    android:text="@string/equals"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/operatorButtonColor"
                    android:textColor="@color/operatorTextColor"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="clickEvent"/>

            </TableRow>

        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>